# atelier

./: .gitignore  AGENTS.md  AGENT_README.md  BENCHMARKS.md  CHANGELOG.md  CLA.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  LICENSE  LICENSE-APACHE  Makefile  QUICK_REFERENCE.md  README.md  copilot-instructions.md  docker-compose.yml  hatch_build.py  opencode.json  pyproject.toml  semantic_file_index.json  test_output.jsonl  vector_cache.sqlite
crates/atelier-tui/: Cargo.toml
crates/atelier-tui/src/: app.rs  highlight.rs  main.rs  protocol.rs  qr.rs  terminal_bridge.rs  tunnel.rs  web.rs
crates/atelier-tui/src/ui/: mod.rs
integrations/: AGENTS.atelier.md  README.md  pyproject.toml
integrations/agents/: auto.md  bare.md  code.md  execute.md  explore.md  plan.md  research.md  review.md  solve.md
integrations/agents/shared/: agent-rule.md  change-discipline.md  coding-guidelines.md  core-discipline.md  reply-register.md  tool-discipline-read.md  tool-discipline.md
integrations/antigravity/: AGENTS.atelier.md  install.sh
integrations/antigravity/plugin/: plugin.json
integrations/antigravity/plugin/agents/: atelier-auto.md  atelier-bare.md  atelier-code.md  atelier-execute.md  atelier-explore.md  atelier-general.md  atelier-plan.md  atelier-repair.md  atelier-research.md  atelier-review.md  atelier-solve.md  lemoncrow-auto.md  lemoncrow-bare.md  lemoncrow-code.md  lemoncrow-execute.md  lemoncrow-explore.md  lemoncrow-general.md  lemoncrow-plan.md  lemoncrow-research.md  lemoncrow-review.md  lemoncrow-solve.md
integrations/atelier-tui/: AGENTS.atelier.md  install.sh  mcp.template.json  settings.json  verify.sh
integrations/claude/: AGENTS.atelier.md  ATELIER_SKILL.md  README.md  install.sh  verify.sh
integrations/claude/plugin/: .mcp.json  AGENT_README.md
integrations/claude/plugin/.cursor-plugin/: plugin.json
integrations/claude/plugin/agents/: auto.md  bare.md  code.dev.md  code.md  execute.dev.md  execute.md  explore.dev.md  explore.md  general.md  native.md  plan.dev.md  plan.md  repair.dev.md  repair.md  research.dev.md  research.md  review.dev.md  review.md  solve.dev.md  solve.md
integrations/claude/plugin/hooks/: _run_hook.sh  agent_redirect.py  compact.py  edit_batching_nudge.py  hooks.json  live_review.py  loop_discipline_post.py  post_commit.py  post_tool_use.py  post_tool_use_bash.py  post_tool_use_compact.py  post_tool_use_failure.py  pre_tool_discipline.py  (+8 more)
integrations/codex/: AGENTS.atelier.dev.md  AGENTS.atelier.md  AGENT_README.md  README.md  install.sh  verify.sh
integrations/codex/hooks/: hooks.json  pre_tool_use.py  savings_reporter.py  stop.py  update_notification.py  user_prompt.py
integrations/codex/plugin/: .mcp.json
integrations/codex/references/: v2-tools.md  workflow.md
integrations/codex/tasks/: preflight.md  review-repair.md
integrations/copilot/: AGENT_README.md  COPILOT_INSTRUCTIONS.atelier.dev.md  COPILOT_INSTRUCTIONS.atelier.md  README.md  install.sh  mcp.atelier.template.json  tasks.json  verify.sh
integrations/copilot-cli/hooks/: hooks.json  post_tool_use_failure.py  session_start.py  stop.py
integrations/copilot/agents/: atelier.agent.md  atelier.auto.agent.md  atelier.bare.agent.md  atelier.code.agent.md  atelier.execute.agent.md  atelier.explore.agent.md  atelier.general.agent.md  atelier.plan.agent.md  atelier.research.agent.md  atelier.review.agent.md  atelier.solve.agent.md  lemoncrow.auto.agent.md  lemoncrow.bare.agent.md  lemoncrow.code.agent.md  lemoncrow.execute.agent.md  lemoncrow.explore.agent.md  lemoncrow.general.agent.md  lemoncrow.plan.agent.md  lemoncrow.research.agent.md  lemoncrow.review.agent.md  lemoncrow.solve.agent.md
integrations/copilot/chatmodes/: atelier.chatmode.md
integrations/cursor/: AGENTS.atelier.md  README.md  mcp.atelier.template.json
integrations/cursor/hooks/: session_start.py
integrations/cursor/rules/: atelier.auto.mdc  atelier.bare.mdc  atelier.code.mdc  atelier.execute.mdc  atelier.explore.mdc  atelier.general.mdc  atelier.plan.mdc  atelier.research.mdc  atelier.review.mdc  atelier.solve.mdc  coding-guidelines.mdc  lemoncrow.auto.mdc  lemoncrow.bare.mdc  lemoncrow.code.mdc  lemoncrow.execute.mdc  lemoncrow.explore.mdc  lemoncrow.general.mdc  lemoncrow.mdc  lemoncrow.plan.mdc  lemoncrow.research.mdc  lemoncrow.review.mdc  lemoncrow.solve.mdc  tool-selection.mdc
integrations/gemini/: GEMINI.atelier.dev.md  GEMINI.atelier.md  README.md
integrations/gemini/extension/: GEMINI.md  gemini-extension.json
integrations/hermes/: AGENTS.atelier.md  README.md
integrations/opencode/: README.md  install.sh  opencode.atelier.template.json  verify.sh
integrations/opencode/agents/: atelier.dev.md  atelier.md  auto.md  bare.md  code.md  execute.md  explore.md  general.md  plan.md  repair.md  research.md  review.md  solve.md
integrations/opencode/plugins/: atelier-nudge.js  atelier_nudge.py  lemoncrow_nudge.py
integrations/shared/: change-discipline.md  coding-guidelines.md  core-discipline.md  cost-discipline.md  tool-discipline.md
integrations/skills/benchmark/: SKILL.md
integrations/skills/code/: SKILL.md
integrations/skills/context/: SKILL.md
integrations/skills/design-review/: SKILL.md
integrations/skills/execute/: SKILL.md
integrations/skills/explore/: SKILL.md
integrations/skills/knowledge/: SKILL.md
integrations/skills/lint/: SKILL.md
integrations/skills/orchestrate/: SKILL.md
integrations/skills/perf-review/: SKILL.md
integrations/skills/reasoning/: SKILL.md
integrations/skills/recall/: SKILL.md
integrations/skills/record/: SKILL.md
integrations/skills/repair/: SKILL.md
integrations/skills/rescue/: SKILL.md
integrations/skills/research/: SKILL.md
integrations/skills/review/: SKILL.md
integrations/skills/savings/: SKILL.md
integrations/skills/settings/: SKILL.md
integrations/skills/solve/: SKILL.md
integrations/skills/swarms/: SKILL.md
integrations/skills/trace/: SKILL.md
integrations/skills/ux-review/: SKILL.md
pro/: .gitignore  LICENSE  README.md  pyproject.toml
pro/src/atelier_pro/: __init__.py  optimizer.py
(+4532 files in other folders)
