[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atelier"
version = "0.2.0"
description = "Agent Context Runtime — reusable procedures, failure rescue, and rubric verification for coding and product agents."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
