[tool.uv]
workspace = { members = ["benchmarks", "integrations"] }
# langfuse>=3 needs opentelemetry-api>=1.33 while letta (memory-server) pins
# ==1.30; they are mutually exclusive optional extras, so declare the conflict
# to keep `uv lock` resolvable. Install at most one of them.
conflicts = [
    [{ extra = "langfuse" }, { extra = "memory-server" }],
]

[project]
name = "atelier"
version = "0.4.5"
description = "Agent Reasoning Runtime — reusable procedures, failure rescue, and rubric verification for coding and product agents."
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = { text = "Apache-2.0" }
authors = [{ name = "Atelier" }]

classifiers = [
    "License :: OSI Approved :: Apache Software License",
]

dependencies = [
    "pydantic>=2.6",
    "click>=8.1",
    "pyyaml>=6.0",
    "rich>=13.7",
    "prompt-toolkit>=3.0",
    "litellm>=1.83.14",
    "tiktoken>=0.9",
    "blake3>=0.4.1",
    "datasketch>=1.6",
    "tree-sitter>=0.23",
    "GitPython>=3.1.50",
    "pygit2==1.19.2",
    "prometheus-client>=0.21",
    "tenacity>=9.0",
    "pybreaker>=1.2",
    "river>=0.22",
    "networkx>=3.4",
    "ortools>=9.10",
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-http>=1.27",
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.46.0",
    "urllib3>=2.7.0",
    "beautifulsoup4>=4.12",
    "markdownify>=1.2.2",
    "trafilatura>=2.0.0",
    "diff-match-patch>=2.1",
    "tree-sitter-language-pack>=1.8.1",
    "rapidfuzz>=3.14.5",
    "markdown-it-py>=3.0",
    "yarl==1.24.2",
    "zipp==4.1.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
memory = ["letta-client>=1.7.12"]
memory-server = ["letta>=0.16.7"]
smart = ["ollama>=0.4.0"]
cloud = ["openai>=1.0"]
postgres = [
    "psycopg[binary]>=3.1",
]
vector = [
    "pgvector>=0.2",
    "numpy>=1.26",
]
parsers = [
    "tree-sitter-languages>=1.10; python_version < '3.13'",
]
rename = ["rope>=0.23"]
langfuse = ["langfuse>=3"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "black>=24.4",
    "mypy>=1.10",
    "types-PyYAML",
    "pyinstaller>=6.10.0",
]

[project.scripts]
atelier = "atelier.gateway.cli:main"
atelierd = "atelier.core.service.daemon:main"

[build-system]
requires = ["hatchling", "mypy", "setuptools"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/atelier"]

[tool.hatch.build.targets.wheel.force-include]
"src/atelier/core/service/telemetry/frustration_lexicon.yaml" = "atelier/core/service/telemetry/frustration_lexicon.yaml"
"integrations" = "atelier/integrations"

[tool.hatch.build.targets.wheel.hooks.custom]
# hatch_build.py: compiles src/atelier/ with mypyc (skipped if ATELIER_SKIP_MYPYC=1)

[tool.ruff]
line-length = 120
target-version = "py313"
exclude = ["benchmarks/mcp_tools/fixtures/downloaded"]
force-exclude = true

[tool.ruff.lint]
select = ["E", "F", "I", "B", "BLE", "UP", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]

[tool.black]
line-length = 120
target-version = ["py313"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers -m 'not slow'"
pythonpath = ["src", "."]
markers = [
    "slow: marks tests as slow",
    "ab: real A/B benchmark for MCP tool savings",
    ]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_ignores = false
ignore_missing_imports = true
warn_return_any = false
disallow_subclassing_any = false
explicit_package_bases = true
mypy_path = ["src", "benchmarks", "integrations"]

[[tool.mypy.overrides]]
module = [
    "atelier.core.service.api",
    "atelier.gateway.adapters.http_api",
]
disable_error_code = ["untyped-decorator"]

[[tool.mypy.overrides]]
module = [
    "atelier.gateway.cli.app",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "tests.*",
]
disallow_untyped_defs = false
disallow_untyped_calls = false
warn_unused_ignores = false
disable_error_code = ["attr-defined"]

[[tool.mypy.overrides]]
module = [
    "scripts.*",
    "benchmarks.*",
]
disallow_untyped_defs = false
disallow_untyped_calls = false
warn_unused_ignores = false
disable_error_code = ["type-arg", "var-annotated"]

[[tool.mypy.overrides]]
module = [
    "atelier.gateway.cli.commands.*",
    "gateway.cli.commands.*",
]
disable_error_code = ["no-untyped-call", "untyped-decorator"]

[dependency-groups]
dev = [
    "black>=24.4",
    "httpx>=0.27",
    "mypy>=1.20.2",
    "pytest>=9.0.3",
    "pytest-cov>=5.0",
    "pytest-forked>=1.6.0",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.5",
    "types-PyYAML",
    "pyinstaller>=6.10.0",
]
