[project]
name = "atelier-integrations"
version = "0.1.0"
description = "Atelier integration plugins and hooks"
requires-python = ">=3.12"
dependencies = [
    "atelier",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
atelier = { workspace = true }

[tool.hatch.metadata]
allow-direct-references = true
