[package]
name = "atelier-tui"
version = "0.1.0"
edition = "2021"
description = "Atelier interactive terminal — Ratatui frontend for the Atelier coding agent"

[[bin]]
name = "atelier-tui"
path = "src/main.rs"

[dependencies]
ratatui = { version = "0.30", features = ["crossterm"] }
ratatui-textarea = "0.9"
crossterm = "0.29"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
