[package]
name = "atelier-tui"
version = "0.1.0"
edition = "2021"
description = "Atelier interactive terminal — Ratatui frontend for the Atelier coding agent"

[[bin]]
name = "atelier-tui"
path = "src/main.rs"

[dependencies]
ratatui = { version = "0.30", features = ["crossterm"] }
ratatui-textarea = "0.9"
crossterm = "0.29"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
qrcode = { version = "0.14", default-features = false }
tui-tree-widget = "0.24"
similar = "3"
arboard = { version = "3", optional = true }
tokio-tungstenite = { version = "0.29", features = ["native-tls"] }
portable-pty = "0.9"
futures-util = "0.3"
base64 = "0.22"

[features]
default = ["clipboard"]
clipboard = ["dep:arboard"]
